--- a/.env
+++ b/.env
@@ -2,6 +2,4 @@
 
 JWT_SECRET_KEY=TTS@12345
 
-MONGODB_URL=mongodb://0.0.0.0:27017/admin
-
-PORT=8000
+MONGODB_URL=mongodb+srv://dlaksh74:<password>@cluster0.x1nd4dn.mongodb.net/?retryWrites=true&w=majority
