--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 
 JWT_SECRET_KEY=TTS@12345
 
-MONGODB_URL=mongodb+srv://dlaksh74:<password>@cluster0.x1nd4dn.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://dlaksh74:M6yyDYl9BqGkJDII@cluster0.vpvkunm.mongodb.net/?retryWrites=true&w=majority&ssl=true
