--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "backend",
+  "name": "bill",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "node index.js"
+    "start": "node app.js",
+    "nodemon": "node app.js"
 
+  },
+  "engines": {
+    "node": ">=18.16.1"
   },
   "author": "Laksh",
   "license": "ISC",
