--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "text": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-      "node": "18.x"
+    "node": "18.x"
   },
   "author": "Laksh",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
+    "jspdf": "^2.5.1",
     "mongoose": "^7.4.5",
     "path": "^0.12.7"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   }
 }
