--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
     "start": "node app.js",
     "text": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines": {
-    "node": "18.x"
-  },
   "author": "Laksh",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
