--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
-# package directories
-node_modules
-jspm_packages
+# Dependency directories
+node_modules/
+jspm_packages/
 
-# Serverless directories
-.serverless
-.vscode
+# Serverless and IDE directories
+.serverless/
+.vscode/
+
+# Package manager lock files
 package-lock.json
+yarn.lock
+
+# Environment variable files
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
